--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-paginate": "^8.2.0",
+    "styled-components": "^6.0.4",
     "typescript": "5.1.6",
     "zustand": "^4.3.9"
   }
