--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "styled-components": "^6.0.4",
     "typescript": "5.1.6",
     "zustand": "^4.3.9"
+  },
+  "resolutions": {
+    "styled-components": "^6"
   }
 }
